# Inductive

./: .gitignore  Inductive.cabal
Haskell/: Inductive.hs
