name: Inductive
version: 2.0
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: Copyright (c) 2012 Irene Knapp
author: Irene Knapp <irene.knapp@icloud.com>
maintainer: irene.knapp@icloud.com
homepage: http://ireneknapp.com/software/
bug-reports: https://github.com/IreneKnapp/Inductive/issues
category: Database
synopsis: An experimental inductive-logic-programming system.
Cabal-version: >= 1.10
Build-type: Simple
description:

Source-Repository head
  type: git
  location: git://github.com/IreneKnapp/Inductive.git

Executable inductive
  main-is: Inductive.hs
  hs-source-dirs: Haskell
  build-depends: base >= 4.1 && < 5
  default-language: Haskell2010

